--- a/absence-tracker/src/main/webapp/pages/secure/holiday/employee/employeeHolidayStatsDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/employee/employeeHolidayStatsDialog.xhtml
@@ -3,7 +3,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui">
 
-    <p:dialog id="employeeHolidayStatsDialog" widgetVar="_employeeHolidayStatsDialog" header="Holiday Statistics"
+    <p:dialog id="employeeHolidayStatsDialog" widgetVar="_employeeHolidayStatsDialog" header="Annual Leave Statistics"
               width="1070" modal="true" dynamic="true" resizable="false" closable="true">
 
         <h:form id="employeeHolidayStatsForm">
