--- a/absence-tracker/src/main/webapp/pages/secure/holiday/management/departmentHolidayStatsDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/management/departmentHolidayStatsDialog.xhtml
@@ -4,7 +4,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-    <p:dialog id="departmentHolidayStatsDialog" widgetVar="_departmentHolidayStatsDialog" header="Department Holiday Statistics"
+    <p:dialog id="departmentHolidayStatsDialog" widgetVar="_departmentHolidayStatsDialog" header="Department Annual Leave Statistics"
               width="1070" modal="true" dynamic="true" resizable="false" closable="true">
         <p:scrollPanel mode="native" style="width:1065px;height:530px" styleClass="borderLess">
         <h:form id="departmentHolidayStatsForm">
