--- a/absence-tracker/src/main/webapp/pages/secure/admin/employee/browseEmployeesDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/admin/employee/browseEmployeesDialog.xhtml
@@ -3,7 +3,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui">
 
-    <p:dialog id="browseEmployeesDialog" widgetVar="_browseEmployeesDialog" header="Employees" modal="true"
+    <p:dialog id="browseEmployeesDialog" widgetVar="_browseEmployeesDialog" header="Users" modal="true"
               dynamic="true" resizable="false" closable="true">
 
         <h:form id="browseEmployees">
