Updated Menu Names and added naming consitency to pages

--- a/absence-tracker/src/main/webapp/pages/secure/welcome.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/welcome.xhtml
@@ -90,6 +90,11 @@
                         </p:tab>
                     </sec:authorize>
 
+                    <p:tab title="User Guide">
+                        <object type="application/pdf" data="/absence-tracker/resources/userguide/userguide.pdf" height="300px" width="100%">
+                        Your browser can't display pdf, <a href="/resources/userguide/userguide.pdf">click</a> to download pdf instead.
+                        </object>
+                    </p:tab>
                 </p:accordionPanel>
             </p:panel>
         </ui:define>
